# compression

./: .travis.yml  CMakeInstallation.cmake  CMakeLists.txt  Makefile.am  README.md  cf  cmake.sh  configure.ac  install.sh
bzip2/: CMakeInstallation.cmake  CMakeLists.txt  Makefile.am  bzip2-config.cmake.in
bzip2/tests/: atconfig
conf/: create.txt
fpzip/: CMakeLists.txt  Makefile.am  fpzip-config.cmake.in
fpzip/examples/: testfpzip
fpzip/inc/: codec.h  pcdecoder.inl  pcencoder.inl
fpzip/src/: CMakeLists.txt  read.cpp  write.cpp
zfp/: CMakeLists.txt  Makefile.am  zfp-config.cmake.in
zlib/: CMakeLists.txt  Makefile.am  mam  zlib-config.cmake.in
