#####
# fpzip CMakeLists.txt file.
#####

SET(fpzip_SOURCES error.cpp
  rcdecoder.cpp rcencoder.cpp rcqsmodel.cpp read.cpp write.cpp)

ADD_DEFINITIONS(-DFPZIP_BLOCK_SIZE=${FPZIP_BLOCK_SIZE})
ADD_DEFINITIONS(-DFPZIP_FP=${FPZIP_FP})
ADD_DEFINITIONS(-DFPZIP_CONV=${FPZIP_CONV})

ADD_LIBRARY(fpzip ${fpzip_SOURCES})

SET_TARGET_PROPERTIES(fpzip PROPERTIES
  VERSION ${fpcomp_LIB_VERSION}
  SOVERSION ${fpcomp_SO_VERSION}
  )


###
# Install the library
###
INSTALL(
  TARGETS fpzip
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    COMPONENT libraries
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    COMPONENT libraries
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    COMPONENT libraries
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  )

###
# Install the header file
###
INSTALL(FILES ${fpzip_SRC_DIR}/inc/fpzip.h
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  COMPONENT headers)
